@@ -78,6 +78,7 @@ void Config::load()
     data.general.actionMenuReplayGainMimeTypes = group.readEntry( "actionMenuReplayGainMimeTypes", QStringList() );
     data.general.replayGainGrouping = (Config::Data::General::ReplayGainGrouping)group.readEntry( "replayGainGrouping", 0 );
     data.general.preferredOggVorbisExtension = group.readEntry( "preferredOggVorbisExtension", "ogg" );
+    data.general.preferredOggVorbisCommentTag = group.readEntry( "preferredOggVorbisCommentTag", "DESCRIPTION" );
 
     // due to a bug lastNormalOutputDirectoryPaths could have more than 5 items
     while( data.general.lastNormalOutputDirectoryPaths.count() > 5 )
@@ -543,6 +544,7 @@ void Config::save()
     group.writeEntry( "actionMenuReplayGainMimeTypes", data.general.actionMenuReplayGainMimeTypes );
     group.writeEntry( "replayGainGrouping", (int)data.general.replayGainGrouping );
     group.writeEntry( "preferredOggVorbisExtension", data.general.preferredOggVorbisExtension );
+    group.writeEntry( "preferredOggVorbisCommentTag", data.general.preferredOggVorbisCommentTag );
 
     group = conf->group( "Advanced" );
     group.writeEntry( "useSharedMemoryForTempFiles", data.advanced.useSharedMemoryForTempFiles );
