@@ -4,6 +4,7 @@
 -Add: sox plugin with support for some new file formats
 -Add: Convert sample rate and sample size, downmix and apply effects (normalize, bass and treble) using sox
 -Add: Copy embedded covers for ogg files using METADATA_BLOCK_PICTURE
+-Add: Option to switch between COMMENT and DESCRIPTION as comment fields for ogg vorbis and flac files
 -Change: Remember dimensions of the sub-windows and dialogs
 -Fix: Handle internal ReplayGain calculation properly
 -Fix: Drop directories onto the ReplayGain tool window
